Remove sensitive database credentials from render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -17,15 +17,15 @@ services:
       - key: DB_CONNECTION
         value: pgsql
       - key: DB_HOST
-        value: ep-aged-haze-a1tz51u3-pooler.ap-southeast-1.aws.neon.tech
+        sync: false
       - key: DB_PORT
-        value: 5432
+        sync: false
       - key: DB_DATABASE
-        value: klinik_db
+        sync: false
       - key: DB_USERNAME
-        value: neondb_owner
+        sync: false
       - key: DB_PASSWORD
-        value: npg_rzysSqGMQ7H2
+        sync: false
       - key: DB_SSLMODE
         value: require
       - key: SESSION_DRIVER
