--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,6 +24,7 @@ http {
     
     server {
         listen 80;
+        listen [::]:80;
         server_name _;
         root /var/www/html/public;
         index index.php;
