Revert to MySQL: restore standard Laravel migration format and remove PostgreSQL dependencies

--- a/.env.render.example
+++ b/.env.render.example
@@ -7,15 +7,13 @@ APP_ENV=production
 APP_DEBUG=false
 APP_KEY=base64:YOUR_APP_KEY_HERE
 
-# PostgreSQL Database (Render)
-DB_CONNECTION=pgsql
-DB_HOST=dpg-d4dfq1ndiees73cithf0-a.singapore-postgres.render.com
-DB_PORT=5432
+# MySQL Database (Railway/PlanetScale)
+DB_CONNECTION=mysql
+DB_HOST=YOUR_MYSQL_HOST_HERE
+DB_PORT=3306
 DB_DATABASE=klinik_db
-DB_USERNAME=my
+DB_USERNAME=YOUR_USERNAME_HERE
 DB_PASSWORD=YOUR_PASSWORD_HERE
-
-DB_SSLMODE=require
 
 # Cache & Session
 SESSION_DRIVER=database
